Findbugs: Use <NumberType>.valueOf(..) instead of 'new <NumberType>(..)'